# mpfq

./: LICENSE  README.md
doc/: .gitignore  Makefile  README  api.xml  design.xml  doc.xml  fieldimpl.xml  install.xml  intro.xml  mpfqdoc.dtd  parsemath.pl  tuning.xml
doc/perl-lib/XML/: Reprocess.pm
doc/xsl/: custom-fo.xsl  custom-xhtml.xsl  custom.xsl  fo.xsl  xhtml-nochunks.xsl  xhtml.xsl
src/: CMakeLists.txt  CMakeMacros.txt  api.pl
src/apps/: CMakeLists.txt  curve25519.c  curve2_251.c  surf127eps.c  surf2_113.c
src/benches/: CMakeLists.txt  bench.pl  fieldop.c  mpfqbench.pl
src/fixmp/: CMakeLists.txt  README  fixmp.h.in
src/fixmp/perl/: gen_mp_longlong.pl  gen_mp_test.pl  gen_mp_x86_32.pl  gen_mp_x86_64.pl
src/gf2n/: CMakeLists.txt  fields.data  gen_gf2n.pl
src/gf2n/helper/: CMakeLists.txt  bitlinalg.c  bitlinalg.h  helper.c  wmat.c  wmat.h
src/gf2n/perl/: gf64.pm
src/gf2n/tracer/: tracer.pl
src/gf2x/: CMakeLists.txt  dump_poly.h  tuning-summary.sh  wizard.pl  wiztest.c
src/gf7/: README  gen_gf7.pl  gf7.pm
src/gfp/: CMakeLists.txt  TODO_for_speed  gen_gfp.pl  mpfq_gfp_common.h
src/gfp/perl/: p127_1.pm  p127_735.pm  p25519.pm
src/gfpe/: CMakeLists.txt  gen_gfpe.pl  mpfq_gfpe_common.h
src/gfpe/perl/: elt.pm  elt_ur.pm  field.pm  gfpe.pm  io.pm
src/include/: timing.h
src/perl-lib/Mpfq/: defaults.pm  gf2n.pm  gf2x.pm  gfp.pm  gfpmgy.pm
src/perl-lib/Mpfq/defaults/: flatdata.pm  mpi_flat.pm  poly.pm  polygcd.pm  pow.pm  vec.pm
src/perl-lib/Mpfq/defaults/vec/: addsub.pm  alloc.pm  conv.pm  flatdata.pm  getset.pm  io.pm  mul.pm
src/perl-lib/Mpfq/engine/: conf.pm  handler.pm  maketext.pm  oo.pm  postprocess.pm  utils.pm
src/perl-lib/Mpfq/gf2n/: field.pm  inversion.pm  io.pm  linearops.pm  mul.pm  reduction.pm  squaring.pm  trivialities.pm
src/perl-lib/Mpfq/gf2n/utils/: poly.pm
src/perl-lib/Mpfq/gf2x/details/: basecase.pm  extra.pm  kara.pm  schoolbook.pm  sse2.pm
src/perl-lib/Mpfq/gf2x/utils/: align.pm  bitops.pm
src/perl-lib/Mpfq/gf2x/wizard/: coldstore.pm  discard.pm
src/perl-lib/Mpfq/gfp/: elt.pm  field.pm  io.pm
src/perl-lib/Mpfq/gfp/mgy/: codec.pm  elt.pm  field.pm  io.pm
src/scripts/: machine.sh  wordsize.sh
src/simd/: README  README.oo  abase.pl
src/simd/perl/: io.pm  p16.pm  simd_char2.pm  simd_dotprod.pm  simd_flat.pm  simd_gfp.pm  simd_multiplex.pm  simd_noflat.pm  simd_p16.pm  simd_u64k.pm  simd_u64n.pm  trivialities.pm
src/test/: CMakeLists.txt  README  mk_name_k.pl
